--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                         </div>
                     </div>
                 
-                    <button type="submit" class="btn mb-4 mt-2">Submit</button>
+                    <button type="submit" class="btn mb-4 mt-2" id="submit">Submit</button>
                 </form>
             </div>
         </div>
@@ -155,7 +155,7 @@
 <!-- Javascript Links -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
-    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+    <script src="assets/moment.js"></script>
     <script src="assets/javascript.js"></script>
 </body>
 </html>
